[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psd-export"
version = "1.0.14"
authors = [
    { name = "cromachina" }
]
license = { file = "LICENSE" }
description = "Fast exporting of PSDs with [tagged] layers for variants."
readme = "README.md"
requires-python = ">=3.0"
dependencies = [
    'numba>=0.57.1',
    'numpy',
    'opencv_python',
    'psd_tools',
    'psutil',
    'pyrsistent',
]
keywords = ["exporter", "psd", "art"]
classifiers = [
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Artistic Software',
    'Topic :: Multimedia :: Graphics',
    'Topic :: Multimedia :: Graphics :: Graphics Conversion',
]

[project.urls]
"Homepage" = "https://github.com/cromachina/psd-export"

[project.scripts]
psd-export = "psd_export.export:main"