[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "psd-export"
version = "1.0.30"
authors = [
    { name = "cromachina" }
]
license = { file = "LICENSE" }
description = "Fast exporting of PSDs with [tagged] layers for variants."
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    'numpy',
    'opencv_python',
    'psd_tools',
    'psutil',
    'pyrsistent',
]
keywords = ["exporter", "psd", "art"]
classifiers = [
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Artistic Software',
    'Topic :: Multimedia :: Graphics',
    'Topic :: Multimedia :: Graphics :: Graphics Conversion',
]

[project.urls]
"Homepage" = "https://github.com/cromachina/psd-export"

[project.scripts]
psd-export = "psd_export.export:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psd_export = ["*.pyx"]
