[build-system]
requires = ["poetry-core", "wheel", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "psd-export"
version = "1.0.33"
authors = ["cromachina"]
license = "MIT"
description = "Fast exporting of PSDs with [tagged] layers for variants."
readme = "README.md"
keywords = ["exporter", "psd", "art"]
classifiers = [
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Artistic Software',
    'Topic :: Multimedia :: Graphics',
    'Topic :: Multimedia :: Graphics :: Graphics Conversion',
]
packages = [
    { include = "src/psd_export" }
]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.11.2"
numpy = "*"
opencv_python = "*"
psd_tools = "*"
psutil = "*"
pyrsistent = "*"

[tool.poetry.urls]
"Homepage" = "https://github.com/cromachina/psd-export"

[tool.poetry.scripts]
psd-export = "src.psd_export.export:main"
